feat;增加版本控制的说明，在前端文档中删除关于版本控制的内容

--- a/01.FrontRules.md
+++ b/01.FrontRules.md
@@ -1,4 +1,4 @@
-# Code of conduct-front 前端编码规范
+# 前端编码规范
 
 > 说明：此编码规范为测试版本，适用于前后段分离项目的前端。如有疑问及建议请联系谷中仁：guzhongren@live.cn
 
@@ -9,8 +9,7 @@
 3. 书写规范
 4. 编码规范
 5. 接口规则
-6. 版本提交
-7. 参考
+6. 参考
 
 ## IDE
 
@@ -604,18 +603,6 @@
     ```
 3. 参数JSON化
     > 如1中的params所示
-
-## 版本提交
-
-|序号|名称|说明|
-|---------|:---------|:---------|
-|1|feat|新功能（feature）|
-|2|chore|构建过程或辅助工具的变动|
-|3|fix|修补bug|
-|4|docs|文档（documentation）|
-|5|refactor|重构（即不是新增功能，也不是修改bug的代码变动）|
-|6|test|增加测试|
-|7|style|格式（不影响代码运行的变动）|
 
 ## 参考
 
