feat;新增语义化版本控制说明

--- a/02.VersionControlCommit.md
+++ b/02.VersionControlCommit.md
@@ -1,6 +1,8 @@
-# 版本提交
+# 版本
 
 > 关于版本控制提交的一些总结
+
+## 版本提交
 
 |序号|名称|说明|
 |---------|:---------|:---------|
@@ -16,4 +18,19 @@
 
 ```shell
 fix; fix Promise's function
+```
+
+## 语义化版本
+
+对于一个给定的版本号 *MAJOR.MINOR.PATCH (主、次、补丁)*，其变化的规律是：
+
+MAJOR version (主版本) 会在 API 发生不可向下兼容的改变时增大。
+MINOR version (次版本) 会在有向下兼容的新功能加入时增大。
+PATCH version (补丁版本) 会在bug以向下兼容的方式被修复时增大。
+我们还可以根据预发布、构建元数据 (build metadata) 的实际需求，在 MAJOR.MINOR.PATCH 格式之上扩展出额外的标记。
+
+## 示例
+
+```shell
+V0.1.1
 ```
