--- a/02.VersionControlCommit.md
+++ b/02.VersionControlCommit.md
@@ -13,11 +13,43 @@
 |5|refactor|重构（即不是新增功能，也不是修改bug的代码变动）|
 |6|test|增加测试|
 |7|style|格式（不影响代码运行的变动）|
+|8|perf|提升性能的代码改动|
+|9|revert|撤销以前的commit|
+
+## 格式
+
++ 每次提交，Commit message 都包括三个部分：header，body 和 footer。
+
++ Header部分只有一行，包括三个字段：type（必需）、scope（可选）和subject（必需）。
+
++ Body 部分是对本次 commit 的详细描述，可以分成多行。
+
++ Footer 部分只用于不兼容变动和关闭 Issue
+  + 不兼容变动
+    + 如果当前代码与上一个版本不兼容，则 Footer 部分以 BREAKING CHANGE开头，后面是对变动的描述、以及变动理由和迁移方法。
+  + 关闭 Issue
+    + 如果当前 commit 针对某个 issue，那么可以在 Footer 部分关闭这个 issue 。
+
+```shell
+<type>[必须](<scope>)[可选]: <subject>[可选]
+<BLANK LINE>[有 body 须添加]
+<body>[可选]
+<BLANK LINE>[有 footer 须添加]
+<footer>[可选]
+```
 
 ## 示例
 
 ```shell
-fix; fix Promise's function
+# Bug修复
+fix: fix Promise's function
+// 空行
+[Bug #2873942]
+
+# 撤销
+revert: feat: add new func...
+// 空行
+Description......
 ```
 
 ## 语义化版本
@@ -25,12 +57,16 @@ fix; fix Promise's function
 对于一个给定的版本号 *MAJOR.MINOR.PATCH (主、次、补丁)*，其变化的规律是：
 
 MAJOR version (主版本) 会在 API 发生不可向下兼容的改变时增大。
+
 MINOR version (次版本) 会在有向下兼容的新功能加入时增大。
+
 PATCH version (补丁版本) 会在bug以向下兼容的方式被修复时增大。
+
 我们还可以根据预发布、构建元数据 (build metadata) 的实际需求，在 MAJOR.MINOR.PATCH 格式之上扩展出额外的标记。
 
 ## 示例
 
 ```shell
-V0.1.1
+V1.0.1
+V0.1.1-alpha1
 ```
