continue: docs：新增版本提交的关键字

--- a/02.VersionControlCommit.md
+++ b/02.VersionControlCommit.md
@@ -15,6 +15,9 @@
 |7|style|格式（不影响代码运行的变动）|
 |8|perf|提升性能的代码改动|
 |9|revert|撤销以前的commit|
+|10|ci|持续集成|
+|11|build|构建程序|
+|12|continue|继续开发某个功能|
 
 ## 格式
 
@@ -42,14 +45,20 @@
 
 ```shell
 # Bug修复
-fix: fix Promise's function
-// 空行
+fix(Promise function): fix Promise's function
+# 空行
 [Bug #2873942]
 
 # 撤销
 revert: feat: add new func...
-// 空行
+# 空行
 Description......
+
+# 新功能
+feat(userManagement): develop user management
+
+# 继续开发
+continue: feat(userManagement): create user's index.html
 ```
 
 ## 语义化版本
