--- a/02.VersionControlCommit.md
+++ b/02.VersionControlCommit.md
@@ -1,5 +1,11 @@
 # 版本
 
+<p align="center">
+	<a href="https://gitmoji.carloscuesta.me">
+		<img src="https://img.shields.io/badge/gitmoji-%20😜%20😍-FFDD67.svg?style=flat-square"
+			 alt="Gitmoji">
+	</a>
+</p>
 > 关于版本控制提交的一些总结
 
 ## 版本提交
