--- a/02.VersionControlCommit.md
+++ b/02.VersionControlCommit.md
@@ -19,11 +19,11 @@
 |5|refactor|重构（即不是新增功能，也不是修改bug的代码变动）|
 |6|test|增加测试|
 |7|style|格式（不影响代码运行的变动）|
-|8|perf|提升性能的代码改动|
-|9|revert|撤销以前的commit|
-|10|ci|持续集成|
-|11|build|构建程序|
-|12|continue|继续开发某个功能|
+|8|perf(**不建议再使用**)|提升性能的代码改动|
+|9|revert(**不建议再使用**)|撤销以前的commit|
+|10|ci(**不建议再使用**)|持续集成|
+|11|build(**不建议再使用**)|构建程序|
+|12|continue(**不建议再使用**)|继续开发某个功能|
 
 ## 格式
 
@@ -63,9 +63,24 @@ Description......
 # 新功能
 feat(userManagement): develop user management
 
-# 继续开发
-continue: feat(userManagement): create user's index.html
+# 更新文档
+docs(userManagement): update userManagement's doc
 ```
+# Revert
+还有一种特殊情况，如果当前 commit 用于撤销以前的 commit，则必须以revert:开头，后面跟着被撤销 Commit 的 Header。
+
+```shell
+revert: feat(pencil): add 'graphiteWidth' option
+
+This reverts commit 667ecc1654a317a13331b17617d973392f415f02.
+```
+
+Body部分的格式是固定的，必须写成This reverts commit &lt;hash>.，其中的hash是被撤销 commit 的 SHA 标识符。
+
+# 关闭 Issue
+如果当前 commit 针对某个issue，那么可以在 Footer 部分关闭这个 issue 。
+
+Closes #234
 
 ### git commit emoji 指南
 
